--- a/mainapp/templates/mainapp/main.html
+++ b/mainapp/templates/mainapp/main.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <body class="body">
     <header class="header">
-        {% include 'discuss/navbar.html' %}
+        {% include 'mainapp/navbar.html' %}
     </header>
     {% block content %}
 
