--- a/mainapp/templates/mainapp/signup.html
+++ b/mainapp/templates/mainapp/signup.html
@@ -1,4 +1,4 @@
-{% extends 'discuss/main.html' %}
+{% extends 'mainapp/main.html' %}
 
 {% block content %}
 <form class="login-first" method="post" action="{% url 'home' %}">
